2011-06-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFileWrapper.m: Add keyed coding.

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBitmapImageRep.m: Reduce floating-point error in the
	expression which computes image point size using DPI and pixel size
	(for TIFF images.)

2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImageRep.m (-description): Implement -description to
	aid debugging.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintInfo.m: Add keyed coding.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m: Add methods -_becomeRulerClient and
	-_resignRulerClient to set self as the ruler client and to resign
	from that. These get called when self becomes first responder or
	resigns from first responder.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSPrintInfo.h,
	* Source/externs.m: Add new MacOSX strings for NSPrintInfo.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWorkspace.h,
	* Source/NSWorkspace.m: Add a few MacOSX methods with dummy implementations.
	* Source/externs.m: Add new notification strings for NSWorkspace.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h
	* Source/NSPopUpButton.m
	* Source/NSMatrix.m
	* Source/NSLayoutManager.m
	* Source/NSTextView.m
	* Source/NSDocumentController.m
	* Source/externs.m: Add a few key value bindings.

2011-06-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m: Remove comment about libicns
	being GPL, it is now LGPL 2.1.

2011-06-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView_actions.m (-moveLeftAndModifySelection:,
	-moveRightAndModifySelection:, -moveWordLeft:,
	-moveWordLeftAndModifySelection:, -moveWordRight:,
	-moveWordRightAndModifySelection:, -setBaseWritingDirection:range:):
	Add basic implementation for these methods.

2011-06-09 13:49-EDT Gregory John Casamento <greg.casamento@gmail.com>
