@@ -1,3 +1,9 @@
+2011-06-13  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/NSImage.m: Completely overhaul the best rep selection.
+	It should now be very close to the algorithm described in the cocoa
+	drawing guide, and fixes numerous bugs with the old code.
+
 2011-06-14 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSFileWrapper.m: Add keyed coding.
